mye styr med saveFile, men fikset.

--- a/VismaBlazor/VismaBlazor/Components/App.razor
+++ b/VismaBlazor/VismaBlazor/Components/App.razor
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
-    <script src="/js/saveFile.js"></script>
+    <script src='/js/saveFile.js'></script>
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="VismaBlazor.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     
-
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
     <HeadOutlet />
 
@@ -21,10 +20,7 @@
 
 <body>
     <Routes />
-    
-
     <script src="_framework/blazor.web.js"></script>
-   
 </body>
 
 </html>
