auth er tilbake

--- a/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
@@ -18,7 +18,7 @@
 
 @rendermode @(new InteractiveServerRenderMode(prerender: true))
 @attribute [StreamRendering]
-
+@attribute [Authorize]
 
 <PageTitle>Hjem</PageTitle>
 
