--- a/VismaBlazor/VismaBlazor/Components/Pages/Error.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Error.razor
@@ -2,6 +2,7 @@
 @using System.Diagnostics
 
 <PageTitle>Error</PageTitle>
+@attribute [Authorize]
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
