fikset txt og csv greier. fjernet csvhelper

--- a/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
@@ -130,14 +130,18 @@
                 var alleID = new List<string>();
                 string linje;
                 bool startLinje = true;
+                var fileExtension = Path.GetExtension(fil.Name)?.ToLower();
                 while ((linje = await leser.ReadLineAsync()) != null)
                 {
-                    if (startLinje)
+                    // Sjekker om filen er av typen txt, hvis ikke hopper leseren over første linje
+                    if (fileExtension != ".txt")
                     {
-                        startLinje = false;
-                        continue;                    
+                        if (startLinje)
+                        {
+                            startLinje = false;
+                            continue;
+                        }
                     }
-
                     alleID.AddRange(linje.Split(',').Where(id => !string.IsNullOrWhiteSpace(id)));
                 }
                 if (alleID.Count > 0)
