--- a/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
@@ -37,10 +37,12 @@
 </RadzenRow>
 
 @code {
+    //Navigerer til Importer siden
     private void ImporterPage() 
     { 
         NavigationManager.NavigateTo("Importer");
     }
+    //navigerer til Generator siden
     private void GeneratorPage()
     {
         NavigationManager.NavigateTo("Generator");
