--- a/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
@@ -81,6 +81,7 @@
 
 @code
 {
+    //variabler
     public string? domain { get; set; }
     public List<BrukerRespons>? BrukerRes;
     private List<string> feilError = new List<string>();
