route til små bokstaver

--- a/VismaBlazor/VismaBlazor/Components/Layout/Nav.razor
+++ b/VismaBlazor/VismaBlazor/Components/Layout/Nav.razor
@@ -24,9 +24,9 @@
                 <RadzenPanel> Ikke pålogget</RadzenPanel>
             }
             <RadzenPanelMenuItem Text="Hjem" Icon="home" Path="" />
-            <RadzenPanelMenuItem Text="Import" Icon="file_upload" Path="Importer" />
-            <RadzenPanelMenuItem Text="Generator" Icon="create" Path="Generator" />
-            <RadzenPanelMenuItem Text="Logg ut" Icon="logout" Path="/Account/Logout" />
+            <RadzenPanelMenuItem Text="Import" Icon="file_upload" Path="importer" />
+            <RadzenPanelMenuItem Text="Generator" Icon="create" Path="generator" />
+            <RadzenPanelMenuItem Text="Logg ut" Icon="logout" Path="/account/logout" />
         </RadzenPanelMenu>
     </RadzenSidebar>
 
