--- a/VismaBlazor/VismaBlazor/Components/Layout/Nav.razor
+++ b/VismaBlazor/VismaBlazor/Components/Layout/Nav.razor
@@ -2,7 +2,9 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using Radzen
 @using Radzen.Blazor
+@using VismaBlazor.AuthSync
 @inject NavigationManager NavigationManager
+@inject BrukerStatus brukerstatus;
 
 <RadzenLayout>
     <RadzenHeader class="bg-white rz-p-2">
@@ -54,19 +56,27 @@
 
     private Task<AuthenticationState>? authenticationState { get; set; }
 
-    public void onLogout()
+    //sender deg til logout
+    public async void onLogout()
     {
-        NavigationManager.NavigateTo("account/logout", true);
+        NavigationManager.NavigateTo("/", true);
     }
 
     //Henter brukernavn fra authenticationState
     protected override async void OnInitialized()
     {
+
         if (authenticationState is not null)
         {
             var state = await authenticationState;
 
             user = state.User.Identity?.Name ?? "";
+
+            if (state.User.Identity.IsAuthenticated)
+            {
+                var bruker = state.User.Claims.Where(c => c.Type.Equals("sid")).Select(c => c.Value).FirstOrDefault();
+                if (bruker != null) brukerstatus.leggbruker(bruker);
+            }
 
         }
         await base.OnInitializedAsync();
