--- a/VismaBlazor/VismaBlazor/Components/Layout/Nav.razor
+++ b/VismaBlazor/VismaBlazor/Components/Layout/Nav.razor
@@ -2,9 +2,9 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using Radzen
 @using Radzen.Blazor
-@using VismaBlazor.AuthSync
+
 @inject NavigationManager NavigationManager
-@inject BrukerStatus brukerstatus;
+
 
 <RadzenLayout>
     <RadzenHeader class="bg-white rz-p-2">
@@ -59,7 +59,7 @@
     //sender deg til logout
     public async void onLogout()
     {
-        NavigationManager.NavigateTo("/", true);
+        NavigationManager.NavigateTo("account/logout", true);
     }
 
     //Henter brukernavn fra authenticationState
@@ -72,11 +72,6 @@
 
             user = state.User.Identity?.Name ?? "";
 
-            if (state.User.Identity.IsAuthenticated)
-            {
-                var bruker = state.User.Claims.Where(c => c.Type.Equals("sid")).Select(c => c.Value).FirstOrDefault();
-                if (bruker != null) brukerstatus.leggbruker(bruker);
-            }
 
         }
         await base.OnInitializedAsync();
