--- a/VismaBlazor/VismaBlazor/Components/Layout/Nav.razor
+++ b/VismaBlazor/VismaBlazor/Components/Layout/Nav.razor
@@ -2,7 +2,6 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using Radzen
 @using Radzen.Blazor
-
 @inject NavigationManager NavigationManager
 
 
@@ -29,7 +28,7 @@
             <RadzenPanelMenuItem Text="Hjem" Icon="home" Path="" />
             <RadzenPanelMenuItem Text="Import" Icon="file_upload" Path="importer" />
             <RadzenPanelMenuItem Text="Generator" Icon="create" Path="generator" />
-            <RadzenPanelMenuItem Text="Logg ut" Icon="logout" Path="/account/logout" Click="@onLogout" />
+            <RadzenPanelMenuItem Text="Logg ut" Icon="logout" Path="/account/logout" />
         </RadzenPanelMenu>
     </RadzenSidebar>
 
@@ -55,12 +54,6 @@
     [CascadingParameter]
 
     private Task<AuthenticationState>? authenticationState { get; set; }
-
-    //sender deg til logout
-    public async void onLogout()
-    {
-        NavigationManager.NavigateTo("account/logout", true);
-    }
 
     //Henter brukernavn fra authenticationState
     protected override async void OnInitialized()
