--- a/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
@@ -14,8 +14,7 @@
 @using Models
 @using Microsoft.AspNetCore.Authorization
 @using System.Linq
-
-@rendermode @(new InteractiveServerRenderMode(prerender: true))
+@rendermode @(new InteractiveServerRenderMode(prerender: false))
 @attribute [StreamRendering]
 @attribute [Authorize]
 
