--- a/VismaBlazor/VismaBlazor/Components/App.razor
+++ b/VismaBlazor/VismaBlazor/Components/App.razor
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <Routes @rendermode="InteractiveServer"/>
+    <Routes @rendermode="InteractiveAuto"/>
     <script src="_framework/blazor.web.js"></script>
 </body>
 
