Flavicon change og mld

--- a/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
@@ -107,7 +107,7 @@
 }
 @if (error == true)
 {
-    <RadzenAlert Text="Vennligst skriv i ett av feltene" Severity="Severity.Warning" AlertStyle="AlertStyle.Danger" AllowClose="false" />
+    <RadzenAlert Text="Begge feltene må være utfylt" Severity="Severity.Warning" AlertStyle="AlertStyle.Danger" AllowClose="false" />
 }
 
 @code {
