--- a/VismaBlazor/VismaBlazor/Components/App.razor
+++ b/VismaBlazor/VismaBlazor/Components/App.razor
@@ -7,10 +7,19 @@
     <base href="/" />
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
     <script src='/js/saveFile.js'></script>
+
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="VismaBlazor.styles.css" />
+    <!---favicon-->
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#b91d47">
+    <meta name="theme-color" content="#ffffff">
     
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
     <HeadOutlet />
