--- a/VismaBlazor/VismaBlazor/Components/Pages/Resultat.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Resultat.razor
@@ -51,7 +51,7 @@
 @if (errorMelding != null)
 {
     <div class="pb-4">  
-    <RadzenAlert Title="Response Melding" AlertStyle="AlertStyle.Info" Variant="Variant.Flat" Shade="Shade.Lighter">
+    <RadzenAlert Title="Responsmelding" AlertStyle="AlertStyle.Info" Variant="Variant.Flat" Shade="Shade.Lighter">
         @errorMelding
     </RadzenAlert> 
     </div>
